Census: Update CAPI text

--- a/1 - Data Entry/CAPI Census/Household/Household.ent.qsf
+++ b/1 - Data Entry/CAPI Census/Household/Household.ent.qsf
@@ -224,7 +224,7 @@ Occurrences=1:1
 ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fswiss\fprq2\fcharset0 Arial;}{\f1\fnil\fcharset0 Arial;}}
 ENG={\colortbl ;\red0\green0\blue0;\red0\green0\blue255;}
 ENG={\*\generator Riched20 10.0.16299}\viewkind4\uc1
-ENG=\pard\widctlpar\cf1\f0\fs24 Can you please give me the names of the persons who usually live in this household and visitors of the household who stayed here last night, starting with the head of the household. \par
+ENG=\pard\widctlpar\cf1\f0\fs24 Can you please give the names of the persons who usually live in this household and visitors of the household who stayed here last night, starting with the head of the household. \par
 ENG=\par
 ENG=Who is the head of household?\par
 ENG=\par
