Census: Update CAPI text

--- a/1 - Data Entry/CAPI Census/Menu/Menu.ent.qsf
+++ b/1 - Data Entry/CAPI Census/Menu/Menu.ent.qsf
@@ -105,9 +105,9 @@ ENG={\colortbl ;\red0\green0\blue0;}
 ENG={\*\generator Riched20 10.0.16299}\viewkind4\uc1
 ENG=\pard\cf1\fs24 You are logged in as \b %capi_staff_name%\b0 .\par
 ENG=\par
-ENG=Please, create your pin code. \par
+ENG=Please create your pin code. \par
 ENG=\par
-ENG=A pin code is a four digit number that enables you to log into the Popstan Cenus (PSC) data collection application. It is recommended to choose a number which you can easly remember and the code should be kept secret.\par
+ENG=A pin code is a four digit number that enables you to log into the Popstan Census data collection application. It is recommended to choose a number which you can easily remember and the code should be kept secret.\par
 ENG=\par
 ENG=}
 
@@ -156,7 +156,7 @@ ENG={\colortbl ;\red0\green0\blue0;}
 ENG={\*\generator Riched20 10.0.16299}\viewkind4\uc1
 ENG=\pard\cf1\fs24 Please create your pin code. \par
 ENG=\par
-ENG=A pin code is a four digit number that enables you to log into the Popstan Census data collection application. It is recommended to choose a number which you can easly remember and the code should be kept secret.\par
+ENG=A pin code is a four digit number that enables you to log into the Popstan Census data collection application. It is recommended to choose a number which you can easily remember and the code should be kept secret.\par
 ENG=\par
 ENG=}
 
