updated the Labor Force Survey example with new 7.3 features

--- a/1 - Data Entry/Labor Force Survey/Menu/Menu.ent.qsf
+++ b/1 - Data Entry/Labor Force Survey/Menu/Menu.ent.qsf
@@ -2,78 +2,78 @@
 Version=CSPro 7.3
 
 [LANGUAGES]
-ENG=English
+EN=English
 
 [QUESTION]
 Field=MENU_DICT.CHOOSE_HOUSEHOLD
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 Choose a household:\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 Choose a household:\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.HOUSEHOLD_ACTION
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 Household: %SAMPROV%-%SAMDIST%-%SAMDWNO%-%SAMHHNO%\par
-ENG=Head: %SAMHNA%\par
-ENG=Address: %SAMHA%\par
-ENG=Phone: %SAMHCT%\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 Household: %SAMPROV%-%SAMDIST%-%SAMDWNO%-%SAMHHNO%\par
+EN=Head: %SAMHNA%\par
+EN=Address: %SAMHA%\par
+EN=Phone: %SAMHCT%\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.HOUSEHOLD_FINAL_RESULT
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 Household: %SAMPROV%-%SAMDIST%-%SAMDWNO%-%SAMHHNO%\par
-ENG=Head: %SAMHNA%\par
-ENG=Address: %SAMHA%\par
-ENG=Phone: %SAMHCT%\par
-ENG=\par
-ENG=Current final result code: %currentFinalResultCode%\par
-ENG=\par
-ENG=Choose the new final result code:\par
-ENG=\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 Household: %SAMPROV%-%SAMDIST%-%SAMDWNO%-%SAMHHNO%\par
+EN=Head: %SAMHNA%\par
+EN=Address: %SAMHA%\par
+EN=Phone: %SAMHCT%\par
+EN=\par
+EN=Current final result code: %currentFinalResultCode%\par
+EN=\par
+EN=Choose the new final result code:\par
+EN=\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.INTERVIEWER_MENU
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 You are logged in as interviewer %STAFF_NAME%.\par
-ENG=\par
-ENG=Please select an option:\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 You are logged in as interviewer %STAFF_NAME%.\par
+EN=\par
+EN=Please select an option:\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.LOGIN
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 Enter staff code to login:\par
-ENG=\par
-ENG=\i Use 001 for supervisor or 002-005 for interviewer\i0\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 Enter staff code to login:\par
+EN=\par
+EN=\i Use 001 for supervisor or 002-005 for interviewer\i0\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.SUPERVISOR_MENU
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 You are logged in as supervisor %STAFF_NAME%.\par
-ENG=\par
-ENG=Please select an option:\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 You are logged in as supervisor %STAFF_NAME%.\par
+EN=\par
+EN=Please select an option:\par
+EN=}
 
 [QUESTION]
 Field=MENU_DICT.SUPERVISOR_REPORTS
-ENG={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
-ENG={\colortbl ;\red0\green0\blue0;}
-ENG={\*\generator Riched20 10.0.15063}\viewkind4\uc1
-ENG=\pard\cf1\fs19 Choose a report to display:\par
-ENG=}
+EN={\rtf1\ansi\ansicpg1252\deff0\nouicompat\deflang1033{\fonttbl{\f0\fnil\fcharset0 Arial;}}
+EN={\colortbl ;\red0\green0\blue0;}
+EN={\*\generator Riched20 10.0.15063}\viewkind4\uc1
+EN=\pard\cf1\fs19 Choose a report to display:\par
+EN=}
 
